diesel_compile_tests/tests/ui/belongs_to_invalid_option_syntax.stderr
error: `belongs_to` must be in the form `belongs_to(...)`
  --> $DIR/belongs_to_invalid_option_syntax.rs:23:3
   |
23 | #[belongs_to]
   |   ^^^^^^^^^^

error: `belongs_to` must be in the form `belongs_to(...)`
  --> $DIR/belongs_to_invalid_option_syntax.rs:24:3
   |
24 | #[belongs_to = "Bar"]
   |   ^^^^^^^^^^^^^^^^^^

error: Expected a struct name
  --> $DIR/belongs_to_invalid_option_syntax.rs:25:3
   |
25 | #[belongs_to()]
   |   ^^^^^^^^^^^^
   |
   = help: e.g. `#[belongs_to(User)]` or `#[belongs_to(parent = "User<'_>")]

error: Expected a struct name
  --> $DIR/belongs_to_invalid_option_syntax.rs:26:3
   |
26 | #[belongs_to(foreign_key = "bar_id")]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: e.g. `#[belongs_to(User)]` or `#[belongs_to(parent = "User<'_>")]

error: `foreign_key` must be in the form `foreign_key = "value"`
  --> $DIR/belongs_to_invalid_option_syntax.rs:27:19
   |
27 | #[belongs_to(Bar, foreign_key)]
   |                   ^^^^^^^^^^^

warning: The form `foreign_key(value)` is deprecated. Use `foreign_key = "value"` instead
  --> $DIR/belongs_to_invalid_option_syntax.rs:28:19
   |
28 | #[belongs_to(Bar, foreign_key(bar_id))]
   |                   ^^^^^^^^^^^^^^^^^^^

warning: Unrecognized option random_option
  --> $DIR/belongs_to_invalid_option_syntax.rs:29:43
   |
29 | #[belongs_to(Baz, foreign_key = "bar_id", random_option)]
   |                                           ^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type or module `foos`
  --> $DIR/belongs_to_invalid_option_syntax.rs:30:8
   |
30 | struct Foo {
   |        ^^^ use of undeclared type or module `foos`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0433`.
